# investor-gui

./: .gitignore  .pre-commit-config.yaml  .publish-fingerprint  README.md  index.html  pyproject.toml
assets/: index-8pK0ZpwY.js  index-BNY5fz1r.js  index-Bo-R5nbO.js  index-CA_GeyKX.js  index-CLxH5BOU.js  index-CnKoGLI7.js  index-D1mQOw2S.css  index-DlsRKbRe.js  index-DwHx168W.css  index-_ZCBqe2Y.css  index-djTUBsGi.js
data/: backtest.json  decisions.json  filings.json  health.json  health_series.json  manifest.json  pipeline.json  podcast_ranking.json  podcast_signals.json  podcasts.json  portfolio.json  recommendations.json  reports.json  roadmap.json  runs.json  signals.json  stocks.json  universe.json
data/podcasts/: 2026-03-23-sparpodden.json  2026-04-07-testpod.json  2026-04-17-aktiepodden.json  2026-04-17-dagen-med-di.json  2026-04-17-efn-borsfrukost.json  2026-04-17-kort-och-lang.json  2026-04-20-borsen-podcast.json  2026-04-20-dagen-med-di.json  2026-04-20-efn-borsfrukost.json  2026-04-20-kort-och-lang.json  2026-04-20-sparpodden.json  2026-04-21-dagen-med-di.json  2026-04-21-efn-borsfrukost.json  2026-04-22-borsen-podcast.json  2026-04-22-dagen-med-di.json  2026-04-22-efn-borsfrukost.json  2026-04-23-dagen-med-di.json  2026-04-23-efn-borsfrukost.json  2026-04-24-aktiepodden.json  2026-04-24-dagen-med-di.json  2026-04-24-efn-borsfrukost.json  2026-04-24-kort-och-lang.json  2026-04-27-dagen-med-di.json  2026-04-27-efn-borsfrukost.json  2026-04-27-kort-och-lang.json  2026-04-28-dagen-med-di.json  2026-04-29-borsen-podcast.json  2026-04-29-dagen-med-di.json  (+134 more)
(+138 files in other folders)
