[project]
name = "investor-gui"
version = "0.1.0"
description = "Investor GUI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
investor-gui = "investor_gui:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
